# useless-machine

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-23-useless-machine.md
docs/superpowers/specs/: 2026-04-23-pieces-08-13-design.md  2026-04-23-useless-machine-repo-design.md
pieces/01-shannon-switch/: README.md  main.py
pieces/02-hello-antiworld/: README.md  main.py
pieces/03-sisyphus-sort/: README.md
pieces/04-99-percent/: README.md  main.py
pieces/05-enterprise-hello/: README.md  architecture.md  main.py
pieces/05-enterprise-hello/greeter/: __init__.py  abstract.py  container.py  events.py  greeter.py  strategies.py
pieces/06-quine-and-vanish/: README.md  main.py
pieces/07-pypi-useless/: README.md  pyproject.toml
pieces/07-pypi-useless/src/useless/: __init__.py
sandbox/: __init__.py  fake_fs.py
tests/: test_fake_fs.py
