[project]
name = "useless-machine"
version = "0.0.1"
description = "A collection of useless Python code in the spirit of Shannon's Ultimate Machine."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "build>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sandbox*"]
exclude = ["pieces*", "tests*", "docs*"]
